added Developer information

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MCP Quiz App - Exam Preparation</title>
-    <meta name="description" content="Model Context Protocol (MCP) exam preparation quiz with 150 practice questions">
+    <title>MCP Quiz App - by Muhammad Abdullah | Exam Preparation</title>
+    <meta name="description" content="Model Context Protocol (MCP) exam preparation quiz with 150 practice questions. Developed by Muhammad Abdullah - Full Stack Developer & MCP Specialist">
+    <meta name="author" content="Muhammad Abdullah">
+    <meta name="keywords" content="MCP, Model Context Protocol, Quiz, Exam Preparation, Muhammad Abdullah, React, TypeScript">
   </head>
   <body>
     <div id="root"></div>
